--- a/src/components/taglist.scss
+++ b/src/components/taglist.scss
@@ -9,8 +9,9 @@
         font-weight: 600;
         padding: 0 .16rem;
         a{
-            color: #4b4b4b;
-            font-size:.14rem;
+            color: #838385;
+            font-size:.12rem;
+            font-weight:400;
         }
         p{
             font-size:.14rem;
@@ -19,17 +20,21 @@
     section{
         overflow-x: auto;
         width: 100%;
+        margin-top: .05rem;
         >ul{
             
             display: flex;
             flex-direction: row;
             flex-wrap: nowrap;
-            // white-space: nowrap;
+            padding: 0 .1rem;
             li{
                 width: 1.25rem;
                 height: 1.25rem;
                 margin: 0 .04rem;
                 flex-shrink:0;
+                position: relative;
+                border-radius: 5px;
+                overflow: hidden;
                 >div{
                     width: 100%;
                     height: 100%;
@@ -38,16 +43,33 @@
                         position: absolute;
                         width: 100%;
                         height: 100%;
-                        z-index:999;
+                        z-index:99;
                         background: black;
-                        opacity: 0.6;
+                        opacity: 0.5;
                     }
                     img{
                     width: 100%;
                     height: 100%;
                     }
                 }
-                
+                >p{
+                    width: 100%;
+                    z-index: 100;
+                    position: absolute;
+                    bottom: .1rem;
+                    padding: 0 .08rem;
+                    display: flex;
+                    align-items: center;
+                    font-size: .14rem;
+                    font-weight: 600;
+                    color: #fff;
+                    span{
+                        width: 100%;
+                        white-space: nowrap;
+                        text-overflow: ellipsis;
+                        overflow: hidden;
+                    }
+                }
             }
         }
     }
