--- a/src/components/main.scss
+++ b/src/components/main.scss
@@ -1,3 +1,11 @@
+@font-face {
+    font-family: 'iconfont';
+    src: url('../assets/icon/iconfont.eot');
+    src: url('../assets/icon/iconfont.eot?#iefix') format('embedded-opentype'),
+    url('../assets/icon/iconfont.woff') format('woff'),
+    url('../assets/icon/iconfont.ttf') format('truetype'),
+    url('../assets/icon/iconfont.svg#iconfont') format('svg');
+  }
 .main{
     height: 100%;
 .top{
