--- a/src/components/taglist.scss
+++ b/src/components/taglist.scss
@@ -1,5 +1,5 @@
 .taglist{
-    padding: .16rem 0;
+    padding: .12rem 0;
     width: 100%;
     >div{
         display: flex;
@@ -54,20 +54,47 @@
                 }
                 >p{
                     width: 100%;
+                    height: .2rem;
                     z-index: 100;
                     position: absolute;
                     bottom: .1rem;
                     padding: 0 .08rem;
                     display: flex;
+                    flex-direction: row;
                     align-items: center;
-                    font-size: .14rem;
-                    font-weight: 600;
-                    color: #fff;
+                    line-height: .2rem;
                     span{
-                        width: 100%;
+                        font-size: .14rem;
+                        font-weight: 600;
+                        color: #fff;
                         white-space: nowrap;
                         text-overflow: ellipsis;
                         overflow: hidden;
+                        margin-left: .05rem;
+                    }
+                    i{
+                        width: .16rem;
+                        height: .16rem;
+                        display: flex;
+                        justify-content: center;
+                        align-items: center;
+                        img{
+                            width: 100%;
+                            height: 100%;
+                            border-radius:100%;
+                        }
+                    }
+                }
+                >i{
+                    position: absolute;
+                    top: .08rem;
+                    right: .08rem;
+                    width: .15rem;
+                    height: .15rem;
+                    z-index: 100;
+                    img{
+                        width: 100%;
+                        height: 100%;
                     }
                 }
             }
