--- a/src/page/explore/explore.scss
+++ b/src/page/explore/explore.scss
@@ -1,6 +1,7 @@
 .explore{
     height: 100%;
     overflow-y: auto;
+    background: white;
     .top{
         width: 100%;
         height: 2.56rem;
@@ -46,7 +47,12 @@
             }
         }
     }
+    h2{
+        font-size: .16rem;
+        font-weight: 600;
+        margin: .24rem 0 0 .16rem;
+    }
     section{
-
+        margin-bottom: .2rem;
     }
 }
