--- a/src/components/main.scss
+++ b/src/components/main.scss
@@ -8,6 +8,8 @@
   }
 .main{
     height: 100%;
+    display: flex;
+    flex-direction: column;
 .top{
     height: .44rem;
     background: black;
@@ -66,6 +68,7 @@
     width: 100%;
     background: #121212;
     position:absolute;
+    margin-top: .42rem;
     z-index: 999;
     opacity: 0.9;
     ul{
