--- a/src/components/taglist.scss
+++ b/src/components/taglist.scss
@@ -92,6 +92,8 @@
                     width: .15rem;
                     height: .15rem;
                     z-index: 100;
+                    color: white;
+                    font-size: .1rem;
                     img{
                         width: 100%;
                         height: 100%;
