--- a/src/page/home/home.scss
+++ b/src/page/home/home.scss
@@ -37,9 +37,26 @@
             .mid{
                 height: 2rem;
                 line-height: .2rem;
-                img{
+                position: relative;
+                background-size: cover;
+                background-position: 50%;
+                background-repeat: no-repeat;
+                overflow: hidden;
+                >img{
                     width: 100%;
                     height: 100%;
+                }
+                >i{
+                    position: absolute;
+                    top: .1rem;
+                    right: .16rem;
+                    width: .15rem;
+                    height: .15rem;
+                    z-index: 100;
+                    img{
+                        width: 100%;
+                        height: 100%;
+                    }
                 }
             }
             .bottom{
@@ -57,7 +74,6 @@
 
                 }
                 >div{
-                    
                     display: flex;
                     align-items: center;
                     height: .2rem;
