--- a/src/page/videos/videos.scss
+++ b/src/page/videos/videos.scss
@@ -1,6 +1,6 @@
 @import '../../style/usage/core/reset.scss';
 
-.photos{
+.videos{
     background: white;
     height: 100%;
     overflow-y: auto;
@@ -50,7 +50,7 @@
         justify-content: center;
         >a{
             width: 100%;
-            height:auto;
+            height:2.11rem;
             position: relative;
             img{
                 display: block;
@@ -108,7 +108,7 @@
             span{
                 margin-left: .05rem;
                 font-size: .17rem;
-                font-weight: 500;
+                font-weight: 600;
                 word-wrap: break-word;
             }
         }
