--- a/src/page/topics/topics.scss
+++ b/src/page/topics/topics.scss
@@ -50,4 +50,49 @@
             }
         }
     }
+    .list{
+        display: flex;
+        justify-content: space-between;
+        flex-wrap: wrap;
+        >a{
+            position: relative;
+            margin: .04rem 0 0;
+            &.big{
+                width: 100%;
+                padding-bottom: 53.333333333333336%;
+            }
+            &.small{
+                width: 49.46666%;
+                padding-bottom: 33.33333333333333%;
+            }
+            div{
+                background-size: cover;
+                background-position: 50%;
+                background-repeat: no-repeat;
+                overflow: hidden;
+                position: absolute;
+                top: 0;
+                left: 0;
+                width: 100%;
+                height: 100%;
+            }
+            >span{
+                position: absolute;
+                top: .05rem;
+                right: .05rem;
+                height: .15rem;
+                background-color: #000;
+                opacity: .6;
+                color: #fff;
+                border-radius: .02rem;
+                font-size: .1rem;
+                font-weight: 600;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                padding: .02rem;
+            }
+            
+        }
+    }
 }
